--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 .App {
   max-width: 860px;
   margin: 0 auto;
+  text-align: center;
 }
 
 input {
@@ -17,26 +19,58 @@ input {
 }
 
 button {
-  background-color: #858585;
+  background-color: black;
   color: white;
-  padding: 14px 20px;
+  padding: 15px 15px;
   margin-top: 10px;
   border-radius: 10px;
   border : none;
+  cursor: pointer;
 }
 
 .ItemAluno {
   background-color: #f6f6f6;
   padding: 20px;
   border: 1px solid #eee;
-  border-radius: 4px;
+  border-radius: 10px;
   margin: 10px 0px;
+  text-align: left;
   /* box-shadow: 10px 10px 5px #e2e2e2; */
+}
+
+.boxCadastrar {
+  display: flex;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 14px;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-items: center;
+}
+
+.boxBtnCadastrar {
+  width: 200px;
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+  justify-content: space-evenly;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.footer {
+  width: 100%;
+  height: 70px;
+  margin-top: 70px;
+  background-color: black;
+  text-align: center;
+  color: rgb(175, 174, 174);
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
+  justify-content: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
