--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
 .App {
   max-width: 860px;
   margin: 0 auto;
@@ -60,17 +66,8 @@ button {
   pointer-events: none;
 }
 
-.footer {
-  width: 100%;
-  height: 70px;
-  margin-top: 70px;
-  background-color: black;
-  text-align: center;
-  color: rgb(175, 174, 174);
-  display: flex;
-  flex-direction: column;
-  align-content: stretch;
-  justify-content: center;
+.boxListas {
+  height: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
