--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,12 @@ button {
   flex-direction: row;
   align-content: space-between;
   justify-content: space-evenly;
+  margin: 0 auto;
+}
+
+.boxBuscar {
+  width: 100%;
+  display: flex;
 }
 
 .App-logo {
@@ -67,7 +73,14 @@ button {
 }
 
 .boxListas {
-  height: 100%;
+  min-height: 800px;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background-color: #282c34;
+  bottom: 0;
 }
 
 @media (prefers-reduced-motion: no-preference) {
