Ajustes nos alinhamentos dos textos

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
+  padding: 0px;
   box-sizing: border-box;
 }
 
@@ -12,6 +12,7 @@ a {
 .App {
   max-width: 860px;
   margin: 0 auto;
+  text-align: center;
 }
 
 input {
@@ -37,6 +38,7 @@ button {
   border: 1px solid #eee;
   padding-bottom: 14px;
   padding: 40px;
+  text-align: left;
 }
 
 .boxBtnCadastrar {
