--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ a {
 .App {
   max-width: 860px;
   margin: 0 auto;
-  padding: 0px 20px;
+  padding: 0px 30px;
   text-align: center;
 }
 
@@ -56,12 +56,17 @@ button {
   display: flex;
 }
 
+.btnBuscar {
+  margin-left: 10px;
+}
+
 .boxResultadoBusca {
   width: 100%;
   height: auto;
   background-color: #f6f6f6;
   padding: 20px;
   border: 1px solid #eee;
+  margin: 10px 0px;
 }
 
 
