--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ button {
 .footer {
   color: #ccc;
   width: 100%;
-  height: 100px;
+  height: auto;
   background-color: #282c34;
   bottom: 0;
 }
