--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ button {
   padding: 40px;
   margin: 20px 0px;
   text-align: left;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .boxBtnCadastrar {
