Criar condição no component busca.

--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,27 @@ button {
   padding: 10px;
 }
 
-.boxResultadoBusca {
+/* .boxResultadoBusca {
+  display: none;
+  width: 100%;
+  height: auto;
+  background-color: #f6f6f6;
+  padding: 20px;
+  border: 1px solid #eee;
+  margin: 10px 0px;
+} */
+
+.boxResultadoCerto {
+  display: none;
+  width: 100%;
+  height: 100px;
+  background-color: #f6f6f6;
+  padding: 20px;
+  border: 1px solid #eee;
+  margin: 10px 0px;
+}
+
+.boxResultadoErrado {
   display: none;
   width: 100%;
   height: auto;
